2019-1/230/users/4023/executions/1732_2503.log
== TEST (2019-05-13 09:45:15) 
-- CODE:
from math import *


k=float(input("Digite o numero de termos da serie: "))

c=0
soma=0

while (k>c):
	soma+=(4)/((-1)**c)*((x**(2*c+1))/(2*c+1))
	c=c+1
print(round(soma,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    soma+=(4)/((-1)**c)*((x**(2*c+1))/(2*c+1))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 09:45:28) 
-- CODE:
from math import *


k=float(input("Digite o numero de termos da serie: "))

c=0
soma=0

while (k>c):
	soma+=(4)/((-1)**c)*(((2*c+1))/(2*c+1))
	c=c+1
print(round(soma,8))
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 09:45:37) 
-- CODE:
from math import *


k=float(input("Digite o numero de termos da serie: "))

c=0
soma=0

while (k>c):
	soma+=(4)/((-1)**c)*(((2*c+1))/(2*c+1))
	c=c+1
print(round(soma,8))
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 09:45:43) 
-- CODE:
from math import *


k=float(input("Digite o numero de termos da serie: "))

c=0
soma=0

while (k>c):
	soma+=(4)/((-1)**c)*(((2*c+1))/(2*c+1))
	c=c+1
print(round(soma,8))
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 09:45:51) 
-- CODE:
from math import *


k=float(input("Digite o numero de termos da serie: "))

c=0
soma=0

while (k>c):
	soma+=(4)/((-1)**c)*(((2*c+1))/(2*c+1))
	c=c+1
print(round(soma,8))
-- EXECUTION TIME:
0.231683
-- TEST CASE 1:
---- input:
136
---- correct output:
3.13423981
---- user output:
0.0
-- TEST CASE 2:
---- input:
22
---- correct output:
3.09616153
---- user output:
0.0
-- TEST CASE 3:
---- input:
15
---- correct output:
3.20818565
---- user output:
4.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 09:48:14) 
-- CODE:
from math import *


k=float(input("Digite o numero de termos da serie: "))

c=0
soma=0

while (k>c):
	soma+=(4)/((-1)**c)*(2*c+1)
	c=c+1
print(round(soma,8))
-- OUTPUT:
-544.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 09:48:18) 
-- CODE:
from math import *


k=float(input("Digite o numero de termos da serie: "))

c=0
soma=0

while (k>c):
	soma+=(4)/((-1)**c)*(2*c+1)
	c=c+1
print(round(soma,8))
-- OUTPUT:
-544.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 09:50:20) 
-- CODE:
from math import *


k=float(input("Digite o numero de termos da serie: "))

c=0
soma=0

while (k>c):
	soma+=(4)/((-1)**c*(2*c+1)
	c=c+1
print(round(soma,8))
-- ERROR:
File "XXXX", line 11
    c=c+1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 09:50:32) 
-- CODE:
from math import *


k=float(input("Digite o numero de termos da serie: "))

c=0
soma=0

while (k>c):
	soma+=(4)/-1**c*(2*c+1)
	c=c+1
print(round(soma,8))
-- OUTPUT:
-73984.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 09:50:43) 
-- CODE:
from math import *


k=float(input("Digite o numero de termos da serie: "))

c=0
soma=0

while (k>c):
	soma+=(4)/(-1)**c*(2*c+1)
	c=c+1
print(round(soma,8))
-- OUTPUT:
-544.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 09:50:47) 
-- CODE:
from math import *


k=float(input("Digite o numero de termos da serie: "))

c=0
soma=0

while (k>c):
	soma+=(4)/(-1)**c*(2*c+1)
	c=c+1
print(round(soma,8))
-- OUTPUT:
-544.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 09:51:11) 
-- CODE:
from math import *


k=float(input("Digite o numero de termos da serie: "))

c=0
soma=0

while (k>c):
	soma+=(4)/(-1)**c*((2*c+1))
	c=c+1
print(round(soma,8))
-- OUTPUT:
-544.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 09:52:27) 
-- CODE:
from math import *


k=float(input("Digite o numero de termos da serie: "))

c=0
soma=0

while (k>c):
	soma+=(4/(2*c+1))*(-1)**c
	c=c+1
print(round(soma,8))
-- OUTPUT:
3.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 09:52:32) 
-- CODE:
from math import *


k=float(input("Digite o numero de termos da serie: "))

c=0
soma=0

while (k>c):
	soma+=(4/(2*c+1))*(-1)**c
	c=c+1
print(round(soma,8))
-- OUTPUT:
3.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 09:52:38) 
-- CODE:
from math import *


k=float(input("Digite o numero de termos da serie: "))

c=0
soma=0

while (k>c):
	soma+=(4/(2*c+1))*(-1)**c
	c=c+1
print(round(soma,8))
-- EXECUTION TIME:
0.208451
-- TEST CASE 1:
---- input:
136
---- correct output:
3.13423981
---- user output:
3.13423981
-- TEST CASE 2:
---- input:
22
---- correct output:
3.09616153
---- user output:
3.09616153
-- TEST CASE 3:
---- input:
15
---- correct output:
3.20818565
---- user output:
3.20818565
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 10:36:40) 
-- CODE:
from math import *


k=float(input("Digite o numero de termos da serie: "))

c=0
soma=0

while (k>c):
	soma+=(4/(2*c+1))*(-1)**c
	c=c+1
print(round(soma,8))
-- OUTPUT:
3.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 13:32:06) 
-- CODE:



k=float(input("Digite o numero de termos da serie: "))

c=0
soma=0

while (k>c):
	soma+=(4/(2*c+1))*(-1)**c
	c=c+1
print(round(soma,8))
-- EXECUTION TIME:
0.162679
-- TEST CASE 1:
---- input:
136
---- correct output:
3.13423981
---- user output:
3.13423981
-- TEST CASE 2:
---- input:
22
---- correct output:
3.09616153
---- user output:
3.09616153
-- TEST CASE 3:
---- input:
15
---- correct output:
3.20818565
---- user output:
3.20818565
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
